--- a/DT.html
+++ b/DT.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <!--- <title>Digital Twin for Safety-critical CPS</title> --->
-<title>Welcome to my homepage!</title>
+<title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -26,10 +26,10 @@ MathJax.Hub.Config({
 <div id="header">
 <div id="header-icon-text-container">
 <div id="header-icon-container" >
-<a href="index.html"><img src="./image/profile2.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
+<a href="index.html"><img src="./image/UST-GZ_white_L4.jpg" alt="" style="width: 494%; height: 135%; position: center; padding:-2px; margin: -10px;"></a>
 </div>
-<div id="header-text-container">
-<a href="index.html">Welcome to my homepage!</a>
+<div id="header-text-container2">
+<a href="index.html">安全与智能信息物理系统实验室<br/>Laboratory for Safe, Secure, and Smart Cyber-Physical Systems</a>
 </div>
 </div>
 <div id="main">
@@ -41,7 +41,7 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">Bingzhuo Zhong<br /> 钟秉灼<br /> @UC Berkely &amp; CU Boulder</div>
+<div class="menu-category">SSS-CPS Lab<br /> @HKUST-GZ</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="index_Chinese.html">中文主页</a></div>
 <div class="menu-category">Research Projects</div>
@@ -78,7 +78,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on May 23<sup>rd</sup> 2024 . </br>
+Last edited  on September 26<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
