--- a/Projects.html
+++ b/Projects.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title>Research Projects</title> --->
+<!--- <title></title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -52,10 +52,22 @@ MathJax.Hub.Config({
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
-<div id="toptitle">
-<h1>Research Projects</h1>
-<div id="subtitle"></div>
-</div>
+<h1>研究经费 Research Grants</h1>
+<ul>
+<li><p><b>面向信息物理系统的大语言模型可控策略生成研究</b>，广州市基础与应用基础研究项目<br />
+主持(PI), Grant No:2025A03J4493，2025.01-2026.12, 250k RMB</p>
+</li>
+<li><p><b>AI推理结果的自动化质量评价机制研究</b>，香港科技大学（广州）-蜂助手AI与IOT智核联合实验室子项目<br />
+主持(PI),2024.12-2025.10, 450k RMB</p>
+</li>
+<li><p><b>融合学科下数学学科教学实践探索——以《人工智能中的数学》课程教学为例</b>，港科广实践项目（萌芽项目）<br />
+主持(PI), Grant No: HKUST(GZ)-ROP2025044, 2025.04-2026.04, 20K RMB</p>
+</li>
+<li><p><b>广州市人工智能前沿交叉科学重点实验室</b>, 基础研究计划-市重点实验室建设项目<br /> 
+参与（Participating),Grant No:2023A03J0008; 2023.04-2025.03, 3M RMB</p>
+</li>
+</ul>
+<h1>部分项目简介 Selected Research Projects</h1>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/SSVA_cover.jpg" alt="" width="300px" /></div>
 <div id="text-container"><h2><a href="./Sva.html" target=&ldquo;blank&rdquo;>Safe-sec-visor Architecture for Cyber-Physical Systems</a></h2>
@@ -88,7 +100,7 @@ In this project, we investigate how to synthesize correct-by-construction contro
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 6<sup>th</sup> 2025 . </br>
+Last edited  on September 26<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
