--- a/Publications.html
+++ b/Publications.html
@@ -55,63 +55,78 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
+<p>* Contribute equally;  <u>Corresponding Author</u></p>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>B. Zhong</b>, W. Dong, X. Yin, and  M. Zamani,  <a href="https://arxiv.org/abs/2408.06982" target=&ldquo;blank&rdquo;>Verification of Diagnosability for Cyber-Physical Systems: A Hybrid Barrier Certificate Approach</a>,  In: IEEE Transactions on Automatic Control,  under review, 2024.</p>
+<li><p>T. Yan, J. Chen, Q. Hua, Y. Yu, and <u><b>B. Zhong</b></u>,  PHANTOM: Precise Hand via Analytic Mapping and Tendon Actuation for Open-Source, Modular Under-actuation,  In: Proceedings of the 2026 IEEE International Conference on Robotics & Automation (ICRA),  under review, 2025.</p>
 </li>
-<li><p>P. Griffioen*, <b>B. Zhong</b>*,  M. Arcak, M. Zamani and M. Caccamo  <a href="https://arxiv.org/abs/2407.11256" target=&ldquo;blank&rdquo;>Data-Driven Controlled Invariant Sets for Gaussian Process State Space Models</a>,  In: Automatica,  under review, 2024.</p>
+<li><p>T. Yan, H. Jian, K. Wang, X. Zhou, J. Long, Y. Zhang, W. Li, and <u><b>B. Zhong</b></u>,  Mind Before Motion: The MCP Formal Interface and the MCP-V Verifiable Planning Layer for Multimodal Robotics,  In: Proceedings of the 2026 IEEE International Conference on Robotics & Automation (ICRA),  under review, 2025.
+</p>
+</li>
+<li><p>J. Li, S. Chen, J. Li, M. Tian and <u><b>B. Zhong</b></u>,  Automatic Generation of Safety-compliant Linear Temporal Logic via Large Language Model: A Self-supervised Framework,  In: Proceedings of the Fourteenth International Conference on Learning Representations,  under review, 2025.</p>
+</li>
+<li><p><u><b>B. Zhong</b></u>, M. Arcak, and  M. Zamani,  Hierarchical Control for Cyber-Physical Systems via General Approximate Alternating Simulation Relations,  In: Nonlinear Analysis: Hybrid Systems,  under review, 2025.</p>
+</li>
+<li><p><b>B. Zhong</b>, W. Dong, <u>X. Yin</u>, and  M. Zamani,  <a href="https://arxiv.org/abs/2408.06982" target=&ldquo;blank&rdquo;>Verification of Diagnosability for Cyber-Physical Systems: A Hybrid Barrier Certificate Approach</a>,  In: IEEE Transactions on Automatic Control,  under review, 2024.</p>
+</li>
+<li><p><u>P. Griffioen*</u>, <b>B. Zhong</b>*,  M. Arcak, M. Zamani and M. Caccamo  <a href="https://arxiv.org/abs/2407.11256" target=&ldquo;blank&rdquo;>Data-Driven Controlled Invariant Sets for Gaussian Process State Space Models</a>,  In: Automatica,  under review, 2024.</p>
+</li>
+<li><p>N. Jahanshahi, <u><b>B. Zhong</b></u>, and M. Zamani,  Sandboxing (AI-based) unverified controllers in partially-observable systems: A data-driven approach,  In: IEEE Transactions on Automatic Control, under review, 2023.</p>
 </li>
 </ol>
 <h2>Journal Papers</h2>
 <ol>
-<li><p><b>B. Zhong</b>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://arxiv.org/abs/2307.02564" target=&ldquo;blank&rdquo;>Secure-by-Construction Synthesis for Conrtrol System</a>,  In: IEEE Transactions on Automatic Control, conditionally accepted, 2024.</p>
+<li><p><u><b>B. Zhong</b></u>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://arxiv.org/abs/2307.02564" target=&ldquo;blank&rdquo;>Secure-by-Construction Synthesis for Conrtrol System</a>,  In: IEEE Transactions on Automatic Control, 70(6), 4170 - 4177, 2025.</p>
 </li>
-<li><p>N. Jahanshahi, <b>B. Zhong</b>, and M. Zamani,  Sandboxing (AI-based) unverified controllers in partially-observable systems: A data-driven approach,  In: IEEE Transactions on Automatic Control, conditionally accepted, 2023.</p>
+<li><p><u><b>B. Zhong</b></u>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/document/10102526" target=&ldquo;blank&rdquo;>Formal synthesis of controllers for uncertain linear systems against omega-regular properties: A set-based approach</a>, In: IEEE Transactions on Automatic Control, Vol. 69, No. 1, 214-229, 2024. (<a href="https://arxiv.org/abs/2111.08734" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
 </li>
-<li><p><b>B. Zhong</b>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/document/10102526" target=&ldquo;blank&rdquo;>Formal synthesis of controllers for uncertain linear systems against omega-regular properties: A set-based approach</a>, In: IEEE Transactions on Automatic Control, Vol. 69, No. 1, 214-229, 2024. (<a href="https://arxiv.org/abs/2111.08734" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
+<li><p><u><b>B. Zhong</b></u>, A. Lavaei, M. Zamani, and M. Caccamo, <a href="https://doi.org/10.1016/j.automatica.2022.110696" target=&ldquo;blank&rdquo;>Automata-based controller synthesis for stochastic systems: A game framework via approximate probabilistic relations</a>, In: Automatica, 147C, 2023. (<a href="https://arxiv.org/abs/2104.11803" target=&ldquo;blank&rdquo;>Preprint</a>) (<a href="https://www.sciencedirect.com/journal/automatica/about/editors-choice" target=&ldquo;blank&rdquo;><b>Editors&rsquo; Choice paper for January 2023</b></a>)</p>
 </li>
-<li><p><b>B. Zhong</b>, A. Lavaei, M. Zamani, and M. Caccamo, <a href="https://doi.org/10.1016/j.automatica.2022.110696" target=&ldquo;blank&rdquo;>Automata-based controller synthesis for stochastic systems: A game framework via approximate probabilistic relations</a>, In: Automatica, 147C, 2023. (<a href="https://arxiv.org/abs/2104.11803" target=&ldquo;blank&rdquo;>Preprint</a>) (<a href="https://www.sciencedirect.com/journal/automatica/about/editors-choice" target=&ldquo;blank&rdquo;><b>Editors&rsquo; Choice paper for January 2023</b></a>)</p>
+<li><p><u><b>B. Zhong</b></u>, A. Lavaei, H. Cao, M. Zamani, and M. Caccamo, <a href="https://www.sciencedirect.com/science/article/pii/S1751570X2100100X?via%3Dihub" target=&ldquo;blank&rdquo;>Safe-visor architecture for sandboxing (AI-based) unverified controllers in stochastic Cyber-Physical Systems</a>, In: Nonlinear Analysis: Hybrid Systems, 43C, 2021 (<a href="https://arxiv.org/abs/2102.05490" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
 </li>
-<li><p><b>B. Zhong</b>, A. Lavaei, H. Cao, M. Zamani, and M. Caccamo, <a href="https://www.sciencedirect.com/science/article/pii/S1751570X2100100X?via%3Dihub" target=&ldquo;blank&rdquo;>Safe-visor architecture for sandboxing (AI-based) unverified controllers in stochastic Cyber-Physical Systems</a>, In: Nonlinear Analysis: Hybrid Systems, 43C, 2021 (<a href="https://arxiv.org/abs/2102.05490" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
-</li>
-<li><p><b>B. Zhong</b>, C. Jordan, and P. Julien, <a href="https://dl.acm.org/doi/abs/10.1145/3377868/" target=&ldquo;blank&rdquo;>Extending signal temporal logic with quantitative semantics by intervals for robust monitoring of Cyber-Physical Systems</a>, In: ACM Transactions on Cyber-Physical Systems, 5(2), 2021.</p>
+<li><p><u><b>B. Zhong</b></u>, C. Jordan, and P. Julien, <a href="https://dl.acm.org/doi/abs/10.1145/3377868/" target=&ldquo;blank&rdquo;>Extending signal temporal logic with quantitative semantics by intervals for robust monitoring of Cyber-Physical Systems</a>, In: ACM Transactions on Cyber-Physical Systems, 5(2), 2021.</p>
 </li>
 </ol>
 <h2>Conference Proceedings</h2>
 <ol>
-<li><p><b>B. Zhong</b>, M. Arcak, and  M. Zamani,  Hierarchical Control for Cyber-Physical Systems via General Approximate Alternating Simulation Relations,  In: Proceedings of the 8th IFAC Conference on Analysis and Design of Hybrid Systems,  to appear,  2024. (<a href="https://www.colorado.edu/conference/adhs2024/ifac-young-author-award-nominations-2024-ifac-adhs" target=&ldquo;blank&rdquo;><b>Best Repeatability Prize Finalist</b></a>)</p>
+<li><p>E. Dietrich, E. Gezer, <u><b>B. Zhong</b></u>, M. Arcak, M. Zamani, R. Skjetne, A. Sorensen,  Symbolic Control for Autonomous Docking of Marine Surface Vessels,  In: Proceedings of 64th IEEE Conference on Decision and Control (CDC),  to appear,  2025. </p>
 </li>
-<li><p><b>B. Zhong</b>*, W. Dong*, X. Yin, and  M. Zamani,  Verification of Diagnosability for Cyber-Physical Systems via Hybrid Barrier Certificates,  In: Proceedings of the 8th IFAC Conference on Analysis and Design of Hybrid Systems,  to appear,  2024.</p>
+<li><p><u><b>B. Zhong</b></u>,  <a href="https://www.sciencedirect.com/science/article/pii/S2405896325004148" target=&ldquo;blank&rdquo;>Towards Safe AI: A Compositional Construction of Safe-visor Architecture for Interconnected Systems</a>,  In: Proceedings of 10th IFAC Conference on Networked Systems,  IFAC-PapersOnLine 59(4), 199-204, 2025.</p>
 </li>
-<li><p><b>B. Zhong</b>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://ieeexplore.ieee.org/abstract/document/10384154" target=&ldquo;blank&rdquo;>Towards trustworthy AI: Sandboxing AI-based unverified controllers for safe and secure Cyber-Physical Systems</a>,  In: Proceedings of 62nd IEEE Conference on Decision and Control (CDC),  pp. 1833-1840,  2023.</p>
+<li><p>W. Dong, <b>B. Zhong</b>, <u>X. Yin</u>, and  M. Zamani,  <a href="https://ieeexplore.ieee.org/abstract/document/10886053/" target=&ldquo;blank&rdquo;>Verification of approximate prognosability via barrier certiffcates</a>,  In: Proceedings of 63rd IEEE Conference on Decision and Control (CDC), pp. 3693-3698, 2024. </p>
 </li>
-<li><p><b>B. Zhong</b>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://www.sciencedirect.com/science/article/pii/S2405896323019833" target=&ldquo;blank&rdquo;>Secure-by-construction controller synthesis via control barrier functions</a>,  In: Proceedings of The 22nd IFAC World Congress, Vol. 56 No. 2, pp. 239-245, 2023.  </p>
+<li><p><u><b>B. Zhong</b></u>, M. Arcak, and  M. Zamani, <a href="https://www.sciencedirect.com/science/article/pii/S2405896324005172" target=&ldquo;blank&rdquo;>Hierarchical Control for Cyber-Physical Systems via General Approximate Alternating Simulation Relations</a>,  In: Proceedings of the 8th IFAC Conference on Analysis and Design of Hybrid Systems, IFAC-PapersOnLine 58 (11), 13-18, 2024. (<a href="https://www.colorado.edu/conference/adhs2024/ifac-young-author-award-nominations-2024-ifac-adhs" target=&ldquo;blank&rdquo;><b>Best Repeatability Prize Finalist</b></a>)</p>
 </li>
-<li><p><b>B. Zhong</b>*, H. Cao*, M. Zamani, and M. Caccamo, <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26789" target=&ldquo;blank&rdquo;>Towards safe AI: Sandboxing DNNs-based Controllers in Stochastic Games</a> In: Proceedings of the 37th AAAI Conference on Artificial Intelligence, Vol. 37 No. 12, pp. 15340-15349, 2023. </p>
+<li><p><u><b>B. Zhong</b>*</u>, W. Dong*, X. Yin, and  M. Zamani, <a href="https://www.sciencedirect.com/science/article/pii/S2405896324005287" target=&ldquo;blank&rdquo;>Verification of Diagnosability for Cyber-Physical Systems via Hybrid Barrier Certificates</a>,  In: Proceedings of the 8th IFAC Conference on Analysis and Design of Hybrid Systems, IFAC-PapersOnLine 58 (11), 81-86, 2024.</p>
 </li>
-<li><p><b>B. Zhong</b>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/abstract/document/9966144" target=&ldquo;blank&rdquo;>Synthesizing safety controllers for uncertain linear systems: A direct data-driven approach</a>, In: Proceedings of IEEE Conference on Control Technology and Applications (CCTA), pp. 1278-1284, 2022. (<a href="https://arxiv.org/abs/2206.00354" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
+<li><p><u><b>B. Zhong</b></u>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://ieeexplore.ieee.org/abstract/document/10384154" target=&ldquo;blank&rdquo;>Towards trustworthy AI: Sandboxing AI-based unverified controllers for safe and secure Cyber-Physical Systems</a>,  In: Proceedings of 62nd IEEE Conference on Decision and Control (CDC),  pp. 1833-1840,  2023.</p>
 </li>
-<li><p>A. Nejati*, <b>B. Zhong</b>*, M. Caccamo and M. Zamani, <a href="https://proceedings.mlr.press/v168/nejati22a.html" target=&ldquo;blank&rdquo;>Data-driven controller synthesis of unknown nonlinear polynomial systems via control barrier certificates</a>, In: Proceedings of the 4th Annual Learning for Dynamics and Control Conference (L4DC), PMLR 168, 2022.</p>
+<li><p><u><b>B. Zhong</b></u>, S. Liu, M. Caccamo, and  M. Zamani,  <a href="https://www.sciencedirect.com/science/article/pii/S2405896323019833" target=&ldquo;blank&rdquo;>Secure-by-construction controller synthesis via control barrier functions</a>,  In: Proceedings of The 22nd IFAC World Congress, Vol. 56 No. 2, pp. 239-245, 2023.  </p>
 </li>
-<li><p><b>B. Zhong</b>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/document/9867876" target=&ldquo;blank&rdquo;>A set-based approach for synthesizing controllers enforcing omega-regular properties over uncertain linear control systems</a>, In: Proceedings of American Control Conference (ACC),  pp. 1575 - 1581, 2022.</p>
+<li><p><u><b>B. Zhong</b>*</u>, H. Cao*, M. Zamani, and M. Caccamo, <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26789" target=&ldquo;blank&rdquo;>Towards safe AI: Sandboxing DNNs-based Controllers in Stochastic Games</a> In: Proceedings of the 37th AAAI Conference on Artificial Intelligence, Vol. 37 No. 12, pp. 15340-15349, 2023. </p>
 </li>
-<li><p>A. Nejati*, <b>B. Zhong</b>*, M. Caccamo, and M. Zamani, <a href="https://ieeexplore.ieee.org/abstract/document/9804558" target=&ldquo;blank&rdquo;>Controller Synthesis for Unknown Polynomial-Type Systems: A Data-Driven Approach</a>, In: Proceedings of the International Workshop on Computation-Aware Algorithmic Design for Cyber-Physical Systems (CAADCPS), IEEE, 2022</p>
+<li><p><u><b>B. Zhong</b></u>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/abstract/document/9966144" target=&ldquo;blank&rdquo;>Synthesizing safety controllers for uncertain linear systems: A direct data-driven approach</a>, In: Proceedings of IEEE Conference on Control Technology and Applications (CCTA), pp. 1278-1284, 2022. (<a href="https://arxiv.org/abs/2206.00354" target=&ldquo;blank&rdquo;>Preprint</a>)</p>
 </li>
-<li><p><b>B. Zhong</b>, A. Lavaei, M. Zamani, and M. Caccamo, <a href="https://doi.org/10.1145/3501710.3524732" target=&ldquo;blank&rdquo;>Poster abstract: Controller synthesis for nonlinear stochastic games via approximate probabilistic relations</a>,  In: Proceeding of 25th ACM International Conference on Hybrid Systems: Computation and Control (HSCC), ACM, 2022</p>
+<li><p>A. Nejati*, <u><b>B. Zhong</b>*</u>, M. Caccamo and M. Zamani, <a href="https://proceedings.mlr.press/v168/nejati22a.html" target=&ldquo;blank&rdquo;>Data-driven controller synthesis of unknown nonlinear polynomial systems via control barrier certificates</a>, In: Proceedings of the 4th Annual Learning for Dynamics and Control Conference (L4DC), PMLR 168, 2022.</p>
 </li>
-<li><p>A. Lavaei, <b>B. Zhong</b>, and M. Caccamo, and M. Zamani, <a href="https://dl.acm.org/doi/abs/10.1145/3457335.3461705" target=&ldquo;blank&rdquo;>Towards trustworthy AI: safe-visor architecture for uncertified controllers in stochastic Cyber-Physical Systems</a>, In: Proceedings of the International Workshop on Computation-Aware Algorithmic Design for Cyber-Physical Systems (CAADCPS), ACM, 2021</p>
+<li><p><u><b>B. Zhong</b></u>, M. Zamani, and M. Caccamo, <a href="https://ieeexplore.ieee.org/document/9867876" target=&ldquo;blank&rdquo;>A set-based approach for synthesizing controllers enforcing omega-regular properties over uncertain linear control systems</a>, In: Proceedings of American Control Conference (ACC),  pp. 1575 - 1581, 2022.</p>
 </li>
-<li><p><b>B. Zhong</b>, M. Zamani, and M. Caccamo, <a href="https://link.springer.com/chapter/10.1007/978-3-030-29662-9_15" target=&ldquo;blank&rdquo;>Sandboxing controllers for stochastic Cyber-Physical Systems</a>, In: 17th International Conference on Formal Modelling and Analysis of Timed Systems (FORMATS), Lecture Notes in Computer Science (VOL 11750), Springer, 2019.</p>
+<li><p>A. Nejati*, <u><b>B. Zhong</b>*</u>, M. Caccamo, and M. Zamani, <a href="https://ieeexplore.ieee.org/abstract/document/9804558" target=&ldquo;blank&rdquo;>Controller Synthesis for Unknown Polynomial-Type Systems: A Data-Driven Approach</a>, In: Proceedings of the International Workshop on Computation-Aware Algorithmic Design for Cyber-Physical Systems (CAADCPS), IEEE, 2022</p>
 </li>
-<li><p><b>B. Zhong</b>, X. Li, and Z. Zou, <a href="https://ieeexplore.ieee.org/abstract/document/7418703" target=&ldquo;blank&rdquo;>Evaluating method of effectiveness of light energy's utilization based on service requirement</a>, In: Proceedings of 2015 International Conference on Renewable Energy Research and Applications (ICRERA), IEEE, 2015.</p>
+<li><p><u><b>B. Zhong</b></u>, A. Lavaei, M. Zamani, and M. Caccamo, <a href="https://doi.org/10.1145/3501710.3524732" target=&ldquo;blank&rdquo;>Poster abstract: Controller synthesis for nonlinear stochastic games via approximate probabilistic relations</a>,  In: Proceeding of 25th ACM International Conference on Hybrid Systems: Computation and Control (HSCC), ACM, 2022</p>
+</li>
+<li><p>A. Lavaei, <u><b>B. Zhong</b></u>, and M. Caccamo, and M. Zamani, <a href="https://dl.acm.org/doi/abs/10.1145/3457335.3461705" target=&ldquo;blank&rdquo;>Towards trustworthy AI: safe-visor architecture for uncertified controllers in stochastic Cyber-Physical Systems</a>, In: Proceedings of the International Workshop on Computation-Aware Algorithmic Design for Cyber-Physical Systems (CAADCPS), ACM, 2021</p>
+</li>
+<li><p><u><b>B. Zhong</b></u>, M. Zamani, and M. Caccamo, <a href="https://link.springer.com/chapter/10.1007/978-3-030-29662-9_15" target=&ldquo;blank&rdquo;>Sandboxing controllers for stochastic Cyber-Physical Systems</a>, In: 17th International Conference on Formal Modelling and Analysis of Timed Systems (FORMATS), Lecture Notes in Computer Science (VOL 11750), Springer, 2019.</p>
+</li>
+<li><p><b>B. Zhong</b>, <u>X. Li</u>, and Z. Zou, <a href="https://ieeexplore.ieee.org/abstract/document/7418703" target=&ldquo;blank&rdquo;>Evaluating method of effectiveness of light energy's utilization based on service requirement</a>, In: Proceedings of 2015 International Conference on Renewable Energy Research and Applications (ICRERA), IEEE, 2015.</p>
 </li>
 </ol>
-<p>* Contribute equally </p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 6<sup>th</sup> 2025 . </br>
+Last edited  on September 26<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
