--- a/group_new.html
+++ b/group_new.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title>实验室成员 Member</title> --->
+<!--- <title>Group</title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -53,7 +53,8 @@ MathJax.Hub.Config({
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
-<h1>实验室成员 Member</h1>
+<h1>Group</h1>
+<div id="subtitle">This page contains all photos of our group.</div>
 </div>
 <div id="text-img-container"><div id="img-container">
 <img src="image/groupphoto_202509.jpg" alt="" width="100%" /></div>
@@ -66,12 +67,12 @@ MathJax.Hub.Config({
 </div>
 <div id="member-text2">
 <p>
-</br>
-<b><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/" target="blank">钟秉灼 Bingzhuo ZHONG</a></b></br>
+<b>钟秉灼 Bingzhuo ZHONG</b></br>
 <b>助理教授 Assistant Professor</b></br>
 慕尼黑工业大学计算机专业自然科学博士</br>
 Dr. rer. nat. in Computer Science, TU Munich, Germany</br>
 Email: bingzhuoz(at)*</br>
+<a href="./bingzhuo/index.html" target="blank"> 个人主页（personal webpage)</a>
 </p>
 </div>
 </div>
@@ -402,7 +403,7 @@ MPhil 2024</br>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 26<sup>th</sup> 2025 . </br>
+Last edited  on September 25<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
