--- a/index_Chinese.html
+++ b/index_Chinese.html
@@ -59,24 +59,24 @@ MathJax.Hub.Config({
 <p>依托香港科技大学（广州）信息枢纽人工智能学域和系统枢纽智能交通学域，实验室的愿景是在实践中发展和融合人工智能，控制，机器人学，形式化方法，数据科学以及通信科学等领域的理论，以构建既安全（safe and secure）又智能（smart）的现代信息物理系统。
 实验室的研究方向包括（但不限于）：</p>
 <ol>
-<li><p>构建即安全（secure-by-construction）的人工智能控制器沙箱机制设计</p>
+<li><p>具身智能安全</p>
 </li>
-<li><p>计算感知型（computation-aware）和硬件感知型 （hardware-aware）控制器的生成</p>
+<li><p>信息物理系统验证和控制</p>
 </li>
-<li><p>深度神经网络的形式化验证</p>
+<li><p>AI + 低空经济</p>
 </li>
-<li><p>运行时保证（run-time assurance）架构下的在线安全强化学习</p>
+<li><p>AI + 海洋工程</p>
 </li>
-<li><p>上述研究成果在自主无人机，无人船等智能系统中的应用</p>
+<li><p>AI + 教育</p>
 </li>
 </ol>
 <p><b>请点击<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>此处</a>查看课题组博士和博士后的招聘信息。</b></p>
 <h2>实验室负责人（Principle Investigator）</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
-<div id="text-container"><h3><br /></h3>
-<h2>钟秉灼， 理学博士(Dr. rer. nat)<br /><br /></h2>
-<h3><b>助理教授</b>，<a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>香港科技大学（广州）</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>信息枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>人工智能学域</a></h3>
+<div id="text-container"><h2>钟秉灼， 理学博士(Dr. rer. nat)<br /><br /></h2>
+<h3><b>助理教授</b>，<b>副研究员</b>，<b>博士生导师</b></h3>
+<h3><a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>香港科技大学（广州）</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>信息枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>人工智能学域</a>,<a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>系统枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>智能交通学域</a></h3>
 <h3>办公室: W4(C8) L3 305</h3>
 <h3>邮箱: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
 </div></div>
@@ -87,7 +87,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 6<sup>th</sup> 2025 . </br>
+Last edited  on September 25<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
