--- a/index.html
+++ b/index.html
@@ -59,23 +59,26 @@ MathJax.Hub.Config({
 <p>Supported by the Thrust of Artificial Intelligence and the Thrust of Intelligent Transportation at the Hong Kong University of Science and Technology(Guangzhou), the vision of the laboratory is to construct modern Cyber-Physical Systems that are safe, secure, and smart by developing and integrating theories from fields including artificial intelligence, control, robotics, formal methods, data science, and communication science in practice.
 The research directions of the laboratory include (but are not limited to):</p>
 <ol>
-<li><p>Designing secure-by-construction sandbox mechanisms for AI-based controllers.</p>
+<li><p>Safe and Secure Embodied Intelligence.</p>
 </li>
-<li><p>Synthesis of computation-aware and hardware-aware controllers.</p>
+<li><p>Verification and Control of Cyber-Physical Systems.</p>
 </li>
-<li><p>Formal verification of deep neural networks.</p>
+<li><p>AI + Low-altitude Economy.</p>
 </li>
-<li><p>Online safe reinforcement learning under run-time assurance architectures.</p>
+<li><p>AI + Ocean Engineering.</p>
 </li>
-<li><p>Intelligent systems such as autonomous UAV and unmanned vessels.</p>
+<li><p>AI + Education.</p>
 </li>
 </ol>
 <p><b>Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> if you want to apply for Ph.D. and Postdoc positions in our lab.</b></p>
 <h2>Principle Investigator</h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
-<div id="text-container"><h2>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)<br /><br /></h2>
-<h3><b>Assistant Professor</b> at the <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a>, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
+<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="220px" height="220px" /></div>
+<div id="text-container"><h2>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)</h2>
+<h2><b>Assistant Professor</b> </h2>
+<h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a></h3>
+<h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>Thrust of Intelligent Transportation</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>System Hub</a></h3>
+<h3><a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
 <h3>Office: W4(C8) L3 305</h3>
 <h3>Email: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
 </div></div>
@@ -86,7 +89,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 6<sup>th</sup> 2025 . </br>
+Last edited  on September 26<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
