--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <h2>Principle Investigator</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="220px" height="220px" /></div>
-<div id="text-container"><h2>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)</h2>
+<div id="text-container"><h2><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/" target=&ldquo;blank&rdquo;>Bingzhuo Zhong</a>, Dr. rer. nat. (钟秉灼)</h2>
 <h2><b>Assistant Professor</b> </h2>
 <h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a></h3>
 <h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>Thrust of Intelligent Transportation</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>System Hub</a></h3>
@@ -89,7 +89,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 26<sup>th</sup> 2025 . </br>
+Last edited  on September 27<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
