--- a/index_Chinese.html
+++ b/index_Chinese.html
@@ -74,8 +74,8 @@ MathJax.Hub.Config({
 <h2>实验室负责人（Principle Investigator）</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
-<div id="text-container"><h2>钟秉灼， 理学博士(Dr. rer. nat)<br /><br /></h2>
-<h3><b>助理教授</b>，<b>副研究员</b>，<b>博士生导师</b></h3>
+<div id="text-container"><h2><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/index_Chinese.html" target=&ldquo;blank&rdquo;>钟秉灼</a>， 理学博士(Dr. rer. nat)<br /><br /></h2>
+<h3><b>副研究员</b>，<b>助理教授</b>，<b>博士生导师</b></h3>
 <h3><a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>香港科技大学（广州）</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>信息枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>人工智能学域</a>,<a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>系统枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>智能交通学域</a></h3>
 <h3>办公室: W4(C8) L3 305</h3>
 <h3>邮箱: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
@@ -87,7 +87,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 25<sup>th</sup> 2025 . </br>
+Last edited  on September 27<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
