--- a/group.html
+++ b/group.html
@@ -158,7 +158,7 @@ Email: bingzhuoz(at)*</br>
 </div>
 <div id="member-text2">
 <p>
-<a href="./group.html" target="blank"> <b>刘益涵 Yihan Liu</b></a> (F'25)</br>
+<a href="https://lyh829.github.io/" target="blank"> <b>刘益涵 Yihan Liu</b></a> (F'25)</br>
 邮箱（email）:  yliu135(at)connect*</br>
 <b>研究主题 Research Topic</b></br>
 通信感知型控制 Communication-aware Control</br>
@@ -207,7 +207,7 @@ Email: bingzhuoz(at)*</br>
 </br></br>
 <a href="./group.html" target="blank"> <b>安也 Ye An</b></a> (F'25)</br>
 联合培养导师：<a href="https://facultyprofiles.hkust-gz.edu.cn/faculty-personal-page?id=496" target="blank"> 吴大琪 教授</a> （Co-supervised by <a href="https://facultyprofiles.hkust-gz.edu.cn/faculty-personal-page?id=496" target="blank">Professor Tai Kai NG</a>) </br>
-邮箱（email）:  zyang688(at)connect*</br>
+邮箱（email）:  yan256(at)connect*</br>
 <b>研究主题 Research Topic</b></br>
 人工智能+教育 AI + Education
 </p>
@@ -226,6 +226,36 @@ Email: bingzhuoz(at)*</br>
 MPhil 2024</br>
 <b>研究主题</b></br>
 人机交互与情感识别
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/HouWenke.jpg">
+<p>
+<b>侯文科 Wenke Hou</b></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+情感陪伴机器人
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/LuZihan.jpg">
+<p>
+<b>刘淑雯 Shuwen Liu</b></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+情感陪伴机器人
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/LuZihan.jpg">
+<p>
+<b>芦子含 Zihan Lu</b></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+情感陪伴机器人
 </p>
 </div> 
 </div>   
@@ -396,13 +426,22 @@ MPhil 2024</br>
 空间智能
 </p>
 </div> 
+<div id="member">
+<img src="image/member/UG/LiuBinkai.jpg">
+<p>
+<b>刘滨恺 Binkai Liu</b></br>
+大三 UG Year 3</br>
+<b>研究主题</b></br>
+机器人感知
+</p>
+</div> 
 </div>   
 </p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 27<sup>th</sup> 2025 . </br>
+Last edited  on November 5<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
