--- a/group.html
+++ b/group.html
@@ -239,7 +239,7 @@ MPhil 2025</br>
 </p>
 </div> 
 <div id="member">
-<img src="image/member/PG/LuZihan.jpg">
+<img src="image/member/PG/LiuShuwen.jpg">
 <p>
 <b>刘淑雯 Shuwen Liu</b></br>
 红鸟硕士四期 </br>
